feat: 분석 기록 날짜 조회 및 상세 조회 API 추가